--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -18,6 +18,20 @@
     background-color: #FEF8E7
   &-9
     background-color: #E5F8F8
+  &-10
+    background-color: #FDF4EE
+  &-11
+    background-color: #F5FDFA
+.bg-fondo
+  &-slider
+    background-image: url("../assets/bg/1.svg") !important
+    background-position: bottom
+  &-slider-2
+    background-image: url("../assets/bg/2.svg") !important
+    background-position: top
+  &-3
+    background-image: url("../assets/bg/blue.svg") !important
+    background-position: center
 .banner-principal-decorativo
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
@@ -130,10 +144,15 @@ $custom-card-img-height: 322px
     padding-left: 1.5rem
     padding-right: 1.5rem
 
-.bg-fondo
-  &-slider
-    background-image: url("../assets/bg/1.svg") !important
-    background-position: bottom
-  &-slider-2
-    background-image: url("../assets/bg/2.svg") !important
-    background-position: top
+.tabs-c__tab--active
+  border-bottom: 4px solid $color-terciario !important
+
+i.fas.fa-circle
+  color: #000
+.icon-list 
+    font-size: 6px;
+    vertical-align: super;
+    color: #000 !important;
+.lista-ul--color li > i:first-of-type 
+    top: 10px !important
+    vertical-align: middle !important
