--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -157,3 +157,7 @@ i.fas.fa-circle
 .lista-ul--color li > i:first-of-type 
     top: 10px !important
     vertical-align: middle !important
+.ctn-actividad
+  background-color: #ebf1f5 !important
+  border-top: 5px solid #f5c145 !important
+  margin-top: 2rem
